# GSDF-SLAM

./: .gitignore  CMakeLists.txt  README.md  build.sh  color_point_cloud.cpp  imgui.ini
cfg/colmap/: gaussian_splatting.yaml
cuda_colorize/: colorize_pointcloud.cu
cuda_rasterizer/: auxiliary.h  forward.cu  rasterizer_impl.cu  rasterizer_impl.h
demo/: test_dataloader.cpp  train_colmap.cpp  train_kitti.cpp
examples/: realsense_rgbd.cpp  train_kitti.cpp  view_result.cpp
include/: camera.h  gaussian_keyframe.h  gaussian_mapper.h  gaussian_model.h  gaussian_parameters.h  gaussian_rasterizer.h  gaussian_scene.h  gaussian_trainer.h  general_utils.h  graphics_utils.h  point2d.h  point3d.h  rasterize_points.h  types.h
scripts/: colmap.sh  imgui.ini  realsense_d455.sh
src/: gaussian_keyframe.cpp  gaussian_mapper.cpp  gaussian_model.cpp  gaussian_parameters.cpp  gaussian_rasterizer.cpp  gaussian_renderer.cpp  gaussian_scene.cpp  gaussian_trainer.cpp  operate_points.cu  rasterize_points.cu
submodules/data_loader/: data_loader.cpp  data_loader.h
submodules/data_loader/data_parsers/: base_parser.cpp  base_parser.h  kitti_parser.hpp  oxford_spires_parser.hpp  oxford_spires_parser_.hpp
submodules/params/: params.cpp  params.h
submodules/utils/: utils.h
submodules/utils/ray_utils/: ray_utils.h
viewer/: drawer_utils.h  imgui_viewer.cpp  imgui_viewer.h
